# agri_circuit_optimizer_scaffold

./: .gitignore  .tmp_developer_instruction.txt  AGENTS.md  Makefile  PROJECT_TREE.txt  README.md  pyproject.toml  requirements.txt
agents/: codex-5.4-data-contract-agent.md  codex-5.4-model-engineer.md  codex-5.4-orchestrator.md  codex-5.4-reporting-agent.md  codex-5.4-test-engineer.md
automation/: README.md  codex_dual_agent_loop.py  codex_supervisor_api.py  execution-profiles.json  execution-profiles.local.example.json  git_commit_policy.md  phase_plan.yaml  stop_rules.md
docs/: 00_index.md  01_system_objectives.md  02_final_scope.md  03_superstructure_architecture.md  04_model_formulation_v1_v2_v3.md  05_data_contract.md  06_materials_library.md  07_acceptance_criteria.md  08_decisions_frozen.md  09_codex_handoff.md  2026-04-03_handoff_decision_platform_runtime.md  2026-04-04_phase1_exit.md  2026-04-04_phase1_to_phase2_handoff.md  2026-04-04_phase1_wave1_bundle_provenance_handoff.md  2026-04-04_phase1_wave1_persistence_handoff.md  2026-04-04_phase1_wave2_save_reopen_handoff.md  2026-04-04_phase1_wave3_topology_authoring_handoff.md  2026-04-04_phase1_wave4_isolation_handoff.md  2026-04-05_phase1_wave1_manifest_canonicalization_handoff.md  2026-04-05_phase1_wave1_save_reopen_handoff.md  2026-04-05_phase1_wave2_reference_integrity_handoff.md  2026-04-05_phase1_wave3_atomic_save_handoff.md  2026-04-05_phase1_wave4_exit_gate_handoff.md  2026-04-05_phase1_wave5_exit_handoff.md  2026-04-05_phase1_wave7_artifact_utf8_handoff.md  2026-04-05_phase2_exit.md  2026-04-05_phase2_to_phase3_handoff.md  2026-04-05_phase2_wave1_handoff.md  (+130 more)
guide/: README.md
(+369 files in other folders)
