[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-circuit-optimizer"
version = "0.1.0"
description = "Scaffold for agricultural hydraulic circuit synthesis and optimization."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["tests/_tmp"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
